--- a/index.html
+++ b/index.html
@@ -49,12 +49,9 @@
         <!-- <![endif]-->
     </head>
     <body>
-        <!-- <h2 style="display: none;">درصدگیری، درصدگیر درصد‌گیر، تست. نحوه‌ی درصد گیری تست و آزمون آنلاین</h2> -->
         <header id="topbar">
-            <!-- <div id="info_box"> -->
                 <h2 style="font-size:xx-large;">درصد‌گیر آزمون</h2>
                 <h3>محاسبه درصد تست و آزمون‌ها با یا بدون نمره منفی</h3>
-            <!-- </div> -->
         </header>
 
         <div id="root_box" class="container">
@@ -67,6 +64,8 @@
                 <input type="number" id="numofquestions" min="0" step="0"/>
                 <label for="corrects">تعداد درست‌ها :</label>
                 <input type="number" id="corrects" min="0" step="0" />
+                <label for="corrects">تعداد نزده‌ها :</label>
+                <input type="number" id="nones" min="0" step="0" />
                 <br/>
                 <label for="incorrects">تعداد غلط‌ها :</label>
                 <input type="number" id="incorrects" min="0" step="0" />
@@ -100,14 +99,13 @@
         </div>
         <div id="popup" class="not_showing">
             <div class="msgbox">
-                <!-- <div class="title">
-                    <h3>نتیجه</h3>
-                    <div class="close">X</div>
-                </div> -->
-                <div class="close" onclick="closepopup()">x</div>
+                <div class="close" onclick="closepopup()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" style="margin-bottom: -5px;" viewBox="0 0 16 16">
+                        <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
+                      </svg>
+                </div>
                 <img id="msg_img" />
                 <p id="msg_result"></p>
-                
             </div>
         </div>
         <br/>
